syntax = "proto3";

message FromClientMessage {
    oneof message_ {
        Hello hello = 1;
        Goodbye goodbye = 2;
    }
}

message Hello {
    uint32 port = 1;
}

message Goodbye {
    uint32 port = 1;
}

message Response {
    repeated Server servers = 1;
}

// Field names are a little bit long just to disambiguate between this and
// Java's InetSocketAddress class that uses hostName and port
message Server {
    string ipAddress = 1;
    uint32 portNumber = 2;
}